--- a/notebook/Algerian Forest.ipynb
+++ b/notebook/Algerian Forest.ipynb
@@ -1,6 +1,53 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ce579903-cc5b-4c34-b309-6c8d456cb69a",
+   "metadata": {},
+   "source": [
+    "# Algerian Forest Fires Processed Dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f00e2f7-f3bf-4038-9823-ca057ef9ae16",
+   "metadata": {},
+   "source": [
+    "About Dataset\n",
+    "The dataset includes 244 instances that regroup a data of two regions of Algeria,namely the Bejaia region located in the northeast of Algeria and the Sidi Bel-abbes region located in the northwest of Algeria.\n",
+    "\n",
+    "122 instances for each region.\n",
+    "\n",
+    "The period from June 2012 to September 2012. The dataset includes 11 attribues and 1 output attribue (class) The 244 instances have been classified into fire(138 classes) and not fire (106 classes) classes.\n",
+    "\n",
+    "Dataset columns:\n",
+    "\n",
+    "Date : (DD/MM/YYYY) Day, month ('june' to 'september'), year (2012) Weather data observations\n",
+    "\n",
+    "Temp : temperature noon (temperature max) in Celsius degrees: 22 to 42\n",
+    "\n",
+    "RH : Relative Humidity in %: 21 to 90\n",
+    "\n",
+    "Ws :Wind speed in km/h: 6 to 29\n",
+    "\n",
+    "Rain: total day in mm: 0 to 16.8 FWI Components\n",
+    "\n",
+    "Fine Fuel Moisture Code (FFMC) index from the FWI system: 28.6 to 92.5\n",
+    "\n",
+    "Duff Moisture Code (DMC) index from the FWI system: 1.1 to 65.9\n",
+    "\n",
+    "Drought Code (DC) index from the FWI system: 7 to 220.4\n",
+    "\n",
+    "Initial Spread Index (ISI) index from the FWI system: 0 to 18.5\n",
+    "\n",
+    "Buildup Index (BUI) index from the FWI system: 1.1 to 68\n",
+    "\n",
+    "Fire Weather Index (FWI) Index: 0 to 31.1\n",
+    "\n",
+    "Classes: two classes, namely Fire and not Fire"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "f9477c7d-7202-438f-b55b-73febe81116e",
@@ -5490,14 +5537,6 @@
     "pickle.dump(scaler,open('scaler.pkl','wb'))\n",
     "pickle.dump(ridge,open('ridge.pkl','wb'))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "456fc599-cff3-4365-96ed-f5c1a74bfaec",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
